--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
+    "react-image": "^1.3.1",
     "react-scripts": "1.1.4",
     "react-transition-group": "^2.3.1"
   },
